==> Nydxsst/GD32_Transplant/0.STM32_原代码/0.MiniSystem/2.MiniSystem_ADC/2.User/144lcd_st7735s/144lcd_st7735s.c <==
#include "144lcd_st7735s.h"
#define A0_H 			ST7735S_CPT144_A0_PORT->ODR|=1<<12
#define A0_L 			ST7735S_CPT144_A0_PORT->ODR&=~(1<<12)
#define CS_H 			ST7735S_CPT144_CS_PORT->ODR|=1<<11
#define CS_L 			ST7735S_CPT144_CS_PORT->ODR&=~(1<<11)
#define RES_H 		ST7735S_CPT144_RES_PORT->ODR|=1<<8
#define RES_L 		ST7735S_CPT144_RES_PORT->ODR&=~(1<<8)

void ST7735S_CPT144_GPIO_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	RCC_APB2PeriphClockCmd(ST7735S_CPT144_A0_SCK | ST7735S_CPT144_CS_SCK |
	                       ST7735S_CPT144_RES_SCK | ST7735S_CPT144_BLK_SCK, ENABLE);
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;

	GPIO_InitStructure.GPIO_Pin = ST7735S_CPT144_A0_PIN;
	GPIO_Init(ST7735S_CPT144_A0_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ST7735S_CPT144_CS_PIN;
	GPIO_Init(ST7735S_CPT144_CS_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ST7735S_CPT144_RES_PIN;
	GPIO_Init(ST7735S_CPT144_RES_PORT, &GPIO_InitStructure);
	
	GPIO_InitStructure.GPIO_Pin = ST7735S_CPT144_BLK_PIN;
	GPIO_Init(ST7735S_CPT144_BLK_PORT, &GPIO_InitStructure);
}

void ST7735S_CPT144_Init(void)
{
	ST7735S_CPT144_GPIO_Init();
	ST7735S_SPI_Init();
	SPI2_SetSpeed(SPI_BaudRatePrescaler_2);
	//--ST7735R Reset Sequence--//
	RES_L;
	Delay_Ms(1);
	RES_H;
	Delay_Ms(120);
	//--End ST7735S Reset Sequence --//
	ST7735S_CPT144_WriteCommand(0x11); //Sleep out
	Delay_Ms(120);
	//--ST7735S Frame rate--//
	ST7735S_CPT144_WriteCommand(0xB1); //Frame rate 80Hz
	ST7735S_CPT144_WriteData(0x02);
	ST7735S_CPT144_WriteData(0x35);
	ST7735S_CPT144_WriteData(0x36);
	ST7735S_CPT144_WriteCommand(0xB2); //Frame rate 80Hz
	ST7735S_CPT144_WriteData(0x02);
	ST7735S_CPT144_WriteData(0x35);
	ST7735S_CPT144_WriteData(0x36);
	ST7735S_CPT144_WriteCommand(0xB3); //Frame rate 80Hz
	ST7735S_CPT144_WriteData(0x02);
	ST7735S_CPT144_WriteData(0x35);
	ST7735S_CPT144_WriteData(0x36);
	ST7735S_CPT144_WriteData(0x02);
	ST7735S_CPT144_WriteData(0x35);
	ST7735S_CPT144_WriteData(0x36);
	//--End ST7735S Frame rate--//
	ST7735S_CPT144_WriteCommand(0xB4); //Dot inversion
	ST7735S_CPT144_WriteData(0x03);
	//--ST7735S Power Sequence--//
	ST7735S_CPT144_WriteCommand(0xC0);
	ST7735S_CPT144_WriteData(0xA2);
	ST7735S_CPT144_WriteData(0x02);
	ST7735S_CPT144_WriteData(0x84);
	ST7735S_CPT144_WriteCommand(0xC1);
	ST7735S_CPT144_WriteData(0xC5);
	ST7735S_CPT144_WriteCommand(0xC2);
	ST7735S_CPT144_WriteData(0x0D);
	ST7735S_CPT144_WriteData(0x00);
	ST7735S_CPT144_WriteCommand(0xC3);
	ST7735S_CPT144_WriteData(0x8D);
	ST7735S_CPT144_WriteData(0x2A);
	ST7735S_CPT144_WriteCommand(0xC4);
	ST7735S_CPT144_WriteData(0x8D);
	ST7735S_CPT144_WriteData(0xEE);
	//--End ST7735S Power Sequence--//
	ST7735S_CPT144_WriteCommand(0xC5); //VCOM
	ST7735S_CPT144_WriteData(0x0a);
	ST7735S_CPT144_WriteCommand(0x36); //MX, MY, RGB mode
	ST7735S_CPT144_WriteData(0xC8);
	//--ST7735S Gamma Sequence--//
	ST7735S_CPT144_WriteCommand(0XE0);
	ST7735S_CPT144_WriteData(0x12);
	ST7735S_CPT144_WriteData(0x1C);
	ST7735S_CPT144_WriteData(0x10);
	ST7735S_CPT144_WriteData(0x18);
	ST7735S_CPT144_WriteData(0x33);
	ST7735S_CPT144_WriteData(0x2C);
	ST7735S_CPT144_WriteData(0x25);
	ST7735S_CPT144_WriteData(0x28);
	ST7735S_CPT144_WriteData(0x28);
	ST7735S_CPT144_WriteData(0x27);
	ST7735S_CPT144_WriteData(0x2F);
	ST7735S_CPT144_WriteData(0x3C);
	ST7735S_CPT144_WriteData(0x00);
	ST7735S_CPT144_WriteData(0x03);
	ST7735S_CPT144_WriteData(0x03);
	ST7735S_CPT144_WriteData(0x10);
	ST7735S_CPT144_WriteCommand(0XE1);
	ST7735S_CPT144_WriteData(0x12);
	ST7735S_CPT144_WriteData(0x1C);
	ST7735S_CPT144_WriteData(0x10);
	ST7735S_CPT144_WriteData(0x18);
	ST7735S_CPT144_WriteData(0x2D);
	ST7735S_CPT144_WriteData(0x28);
	ST7735S_CPT144_WriteData(0x23);
	ST7735S_CPT144_WriteData(0x28);
	ST7735S_CPT144_WriteData(0x28);
	ST7735S_CPT144_WriteData(0x26);
	ST7735S_CPT144_WriteData(0x2F);
	ST7735S_CPT144_WriteData(0x3B);
	ST7735S_CPT144_WriteData(0x00);
	ST7735S_CPT144_WriteData(0x03);
	ST7735S_CPT144_WriteData(0x03);
	ST7735S_CPT144_WriteData(0x10);
	//--End ST7735S Gamma Sequence--//
	ST7735S_CPT144_WriteCommand(0x3A); //65k mode
	ST7735S_CPT144_WriteData(0x05);
	ST7735S_CPT144_WriteCommand(0x29); //Display on

	ST7735S_CPT144_displayColor(ST7735S_CPT144_WHITE);
	ST7735S_CPT144_BLK = 1;
}
